Compiler/src/main/java/Testing/Tests/SemanticTests/failing/DuplicateAttributeHeritance.ru
struct A{
Array Char b;}

impl A{
.(){}}

struct B : A{
Bool b;}

impl B{
.(){}}

start{}